# FactorSplit

./: .gitignore  core.py  pyproject.toml  requirements.txt  streamlit_app.py
